--- a/chatbot.html
+++ b/chatbot.html
@@ -12,7 +12,7 @@
       <h2>🍴 ForkBot</h2>
       <p>Your friendly food assistant</p>
     </div>
-    <div class="chat-body">
+    <div class="chat-body" id="chatBody">
       <div class="message bot">Hi! I’m ForkBot. Ask me about recipes! 🍳</div>
     </div>
     <div class="chat-footer">
@@ -24,3 +24,4 @@
   <script src="chatbot.js"></script>
 </body>
 </html>
+
