--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ForkBot - Your AI Food Assistant</title>
   <link rel="stylesheet" href="chatbot.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="chat-container">
     <div class="chat-header">
       <h2>🍴 ForkBot</h2>
-      <p>Your friendly food assistant</p>
+      <p>Forkcast food assistant</p>
     </div>
-    <div class="chat-body" id="chatBody">
+    <div class="chat-body">
       <div class="message bot">Hi! I’m ForkBot. Ask me about recipes! 🍳</div>
     </div>
     <div class="chat-footer">
@@ -24,6 +25,3 @@
   <script src="chatbot.js"></script>
 </body>
 </html>
-
-
-
