--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2>🍴 ForkBot</h2>
       <p>Forkcast food assistant</p>
     </div>
-    <div class="chat-body">
+    <div class="chat-body" id="chatBody">
       <div class="message bot">Hi! I’m ForkBot. Ask me about recipes! 🍳</div>
     </div>
     <div class="chat-footer">
@@ -25,3 +25,4 @@
   <script src="chatbot.js"></script>
 </body>
 </html>
+
